--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,14 @@
     <color name="tab_light_color">#00B38B</color>
     <color name="tab_color">#AEAEAE</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="primary">#3f51b5</color>
+    <color name="primary_pressed">#3f91b5</color>
+    <color name="primary_dark">#303f9f</color>
+    <color name="ripple">#F06292</color>
+    <color name="accent">#E91E63</color>
+    <color name="accent_pressed">#C2185B</color>
+    <color name="white">#fafafa</color>
+    <color name="white_pressed">#f1f1f1</color>
+    <color name="half_black">#808080</color>
+    <color name="black_semi_transparent">#B2000000</color>
 </resources>
