--- a/app/src/main/res/layout/fragment12.xml
+++ b/app/src/main/res/layout/fragment12.xml
@@ -22,7 +22,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|right"
         android:layout_margin="16dp"
-        android:src="@mipmap/product1"
+        android:src="@mipmap/glod1"
         fab:fab_colorNormal="@color/primary"
         fab:fab_colorPressed="@color/primary_pressed"
         fab:fab_colorRipple="@color/ripple" />
