--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,4 +15,5 @@
     <color name="white_pressed">#f1f1f1</color>
     <color name="half_black">#808080</color>
     <color name="black_semi_transparent">#B2000000</color>
+    <color name="main_color">#5CB85C</color>
 </resources>
