--- a/app/src/main/res/layout/fragment_four.xml
+++ b/app/src/main/res/layout/fragment_four.xml
@@ -89,6 +89,9 @@
                     app:indicator_drawable_selected="@drawable/selected_radius" />
             </FrameLayout>
 
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="5dp"/>
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -113,28 +116,7 @@
 
                 </LinearLayout>
 
-                <View
-                    android:layout_width="1dp"
-                    android:background="@color/primary"
-                    android:layout_height="match_parent"/>
-                <LinearLayout
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:gravity="center"
-                    android:orientation="vertical">
-
-                    <ImageView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:src="@mipmap/ic_launcher" />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="工程" />
-
-                </LinearLayout>
+                <View style="@style/view_line" />
 
                 <LinearLayout
                     android:layout_width="0dp"
@@ -155,6 +137,8 @@
 
                 </LinearLayout>
 
+                <View style="@style/view_line" />
+
                 <LinearLayout
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
@@ -173,6 +157,29 @@
                         android:text="工程" />
 
                 </LinearLayout>
+
+                <View style="@style/view_line" />
+
+                <LinearLayout
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:gravity="center"
+                    android:orientation="vertical">
+
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@mipmap/ic_launcher" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="工程" />
+
+                </LinearLayout>
+
+                <View style="@style/view_line" />
 
                 <LinearLayout
                     android:layout_width="0dp"
@@ -218,24 +225,7 @@
 
                 </LinearLayout>
 
-                <LinearLayout
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:gravity="center"
-                    android:orientation="vertical">
-
-                    <ImageView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:src="@mipmap/ic_launcher" />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="工程" />
-
-                </LinearLayout>
+                <View style="@style/view_line" />
 
                 <LinearLayout
                     android:layout_width="0dp"
@@ -256,6 +246,8 @@
 
                 </LinearLayout>
 
+                <View style="@style/view_line" />
+
                 <LinearLayout
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
@@ -274,6 +266,29 @@
                         android:text="工程" />
 
                 </LinearLayout>
+
+                <View style="@style/view_line" />
+
+                <LinearLayout
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:gravity="center"
+                    android:orientation="vertical">
+
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@mipmap/ic_launcher" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="工程" />
+
+                </LinearLayout>
+
+                <View style="@style/view_line" />
 
                 <LinearLayout
                     android:layout_width="0dp"
@@ -304,7 +319,7 @@
                 <android.support.v7.widget.RecyclerView
                     android:id="@+id/recyclerView"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"/>
+                    android:layout_height="match_parent" />
 
             </com.baoyz.widget.PullRefreshLayout>
         </LinearLayout>
