--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,4 +16,5 @@
     <color name="half_black">#808080</color>
     <color name="black_semi_transparent">#B2000000</color>
     <color name="main_color">#5CB85C</color>
+    <color name="line">#E6E6E6</color>
 </resources>
